# Slay-the-Spire-2-map-drawer

./: .gitignore  LICENSE  README.md  build_launcher.cmd  config.example.json  pyproject.toml  requirements.txt  run.cmd  run.ps1
launcher/: STS2MapDrawerLauncher.cs
sts2_drawer/: __init__.py  cli.py  gui.py  image_trace.py  mouse_draw.py
