[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sts2-map-drawer"
version = "0.1.0"
description = "Turn images into slow mouse strokes for Slay the Spire 2 map doodles."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "Pillow>=10.0.0",
  "numpy>=1.24,<2",
  "opencv-python-headless>=4.11,<4.12",
]

[project.scripts]
sts2-drawer = "sts2_drawer.cli:main"

[tool.setuptools.package-data]
sts2_drawer = ["assets/*.png", "assets/*.ico"]
